# win-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-mingw.sh
include/: TimerThread.h  getopt.h
source/: TimerThread.cpp  getopt.c  tags
test/: test-g++.sh  test.cpp  test_getopt_long.cpp
